# jupyter_linear_execution

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.MD  main.py  setup.cfg  test.py
example/: bad_notebook.ipynb  valid_notebook.ipynb
jupyter_linear_execution/: main.py
