# setup.cfg
[metadata]
name = jupyter-linear-execution
description = assure linear cell execution in jupyter notebooks
version = 0.1.0
author = Alexander Osipenko
author_email = foo@example.com
license = MIT
url = https://github.com/subpath

[options]
packages = find:

[options.entry_points]
console_scripts = jupyter-linear-execution = jupyter_linear_execution.main:main